--- a/trunk/simulations-java/simulations/motion-series/data/motion-series/localization/motion-series-strings_el.properties
+++ b/trunk/simulations-java/simulations/motion-series/data/motion-series/localization/motion-series-strings_el.properties
@@ -1,88 +1,111 @@
-#D:\logismika\phet\Phet_sims_v3\the-ramp-strings_el.properties
-#Tue Feb 12 18:27:47 EET 2008
+#motion-series-strings_el.properties created Fri Nov 12 18:02:26 EET 2010 using: motion-series 2.00.00 (45090), translation-utility 2.09.00 (44031) \u03A3\u03B5\u03C0 14, 2010
+#Fri Nov 12 18:02:26 EET 2010
 property.ramp-angle=\u0393\u03C9\u03BD\u03AF\u03B1 \u039A\u03B5\u03BA\u03BB. \u0395\u03C0\u03B9\u03C0\u03AD\u03B4\u03BF\u03C5
-module.introduction=\u0395\u03B9\u03C3\u03B1\u03B3\u03C9\u03B3\u03AE
-controls.sound=\u0397\u03C7\u03BF\u03C2
-time.go=\u03A0\u03AC\u03BC\u03B5\!
-forces.parallel-friction=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u03A4\u03C1\u03B9\u03B2\u03AE
-readout.seconds={0} \u03B4\u03B5\u03C5\u03C4\u03B5\u03C1\u03CC\u03BB\u03B5\u03C0\u03C4\u03B1
-coordinates.entire-vectors=\u039F\u03BB\u03CC\u03BA\u03BB\u03B7\u03C1\u03B1 \u0394\u03B9\u03B1\u03BD\u03CD\u03C3\u03BC\u03B1\u03C4\u03B1
-forces.Gravity=\u0392\u03B1\u03C1\u03CD\u03C4\u03B7\u03C4\u03B1
-time.slow-motion=\u0391\u03C1\u03B3\u03AE \u039A\u03AF\u03BD\u03B7\u03C3\u03B7
-the-ramp.description=\u0394\u03C5\u03BD\u03AC\u03BC\u03B5\u03B9\u03C2 \u03C3\u03B5 \u03BA\u03B5\u03BA\u03BB\u03B9\u03BC\u03AD\u03BD\u03BF \u03B5\u03C0\u03AF\u03C0\u03B5\u03B4\u03BF.
-time.record=\u039A\u03B1\u03C4\u03B1\u03B3\u03C1\u03B1\u03C6\u03AE
-the-ramp.name=\u039A\u03B5\u03BA\u03BB\u03B9\u03BC\u03AD\u03BD\u03BF \u0395\u03C0\u03AF\u03C0\u03B5\u03B4\u03BF
-energy.thermal=\u0398\u03B5\u03C1\u03BC\u03B9\u03BA\u03AE
-message.overheated=\u03A5\u03C0\u03B5\u03C1\u03B8\u03AD\u03C1\u03BC\u03B1\u03BD\u03C3\u03B7.
-object.dog=\u03A3\u03BA\u03CD\u03BB\u03BF\u03C2
+properties.position=\u0398\u03AD\u03C3\u03B7
+game.moved-items=\u039C\u03B5\u03C4\u03B1\u03BA\u03B9\u03BD\u03B7\u03BC\u03AD\u03BD\u03B1 \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03B1
+properties.velocity=\u03A4\u03B1\u03C7\u03CD\u03C4\u03B7\u03C4\u03B1 \u03BA\u03AF\u03BD\u03B7\u03C3\u03B7\u03C2
+force.abbrev.wall=w
+bodies.jupiter=\u0394\u03AF\u03B1\u03C2
+audio.on=\u03B1\u03BD\u03BF\u03B9\u03C7\u03C4\u03CC\u03C2
+coordinates.y=y
+coordinates.x=x
+object.position=\u0398\u03AD\u03C3\u03B7 \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03B9\u03BC\u03AD\u03BD\u03BF\u03C5
+property.coefficient-of-kinetic-friction=<html>\u039A\u03B9\u03BD\u03B7\u03C4\u03B9\u03BA\u03AE \u03C4\u03C1\u03B9\u03B2\u03AE (\u03BC <sub>k</sub>)</html>
+game.play-again=\u0395\u03BA\u03C4\u03AD\u03BB\u03B5\u03C3\u03B7 \u03C0\u03AC\u03BB\u03B9
+ramp-forces-and-motion.module.introduction=\u0395\u03B9\u03C3\u03B1\u03B3\u03C9\u03B3\u03AE
+game.intro.robot-moving-company=<html>\u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1<br>\u039C\u03B5\u03C4\u03B1\u03C6\u03BF\u03C1\u03CE\u03BD<br>"\u03A4\u03BF \u03C1\u03BF\u03BC\u03C0\u03CC\u03C4"</html>
+object.dog=\u03A3\u03BA\u03CD\u03BB\u03BF\u03C2 \u03C0\u03BF\u03C5 \u03BA\u03BF\u03B9\u03BC\u03AC\u03C4\u03B1\u03B9
+force.abbrev.friction=f
 units.degrees=\u03BC\u03BF\u03AF\u03C1\u03B5\u03C2
-coordinates.y-components=\u03A3\u03C5\u03BD\u03B9\u03C3\u03C4\u03CE\u03C3\u03B5\u03C2-Y
-time.pause=\u0394\u03B9\u03B1\u03BA\u03BF\u03C0\u03AE
-controls.velocity=\u03A4\u03B1\u03C7\u03CD\u03C4\u03B7\u03C4\u03B1
-camera.zoom-in=\u039C\u03B5\u03B3\u03AD\u03B8\u03C5\u03BD\u03C3\u03B7
+game.result.delivered-successfully=\u03B5\u03C0\u03B9\u03C4\u03C5\u03C7\u03B7\u03BC\u03AD\u03BD\u03B7 \u03C0\u03B1\u03C1\u03AC\u03B4\u03BF\u03C3\u03B7
+controls.hide=\u0391\u03C0\u03CC\u03BA\u03C1\u03C5\u03C8\u03B7
+forces-and-motion.module.graphing.title=\u0393\u03C1\u03B1\u03C6\u03AE\u03BC\u03B1\u03C4\u03B1 \u03B4\u03CD\u03BD\u03B1\u03BC\u03B7\u03C2
+game.scoreboard.score.pattern.score=\u0392\u03B1\u03B8\u03BC\u03BF\u03BB\u03BF\u03B3\u03AF\u03B1\: {0}
 property.mass=\u039C\u03AC\u03B6\u03B1
-module.more-features=\u03A0\u03B5\u03C1\u03B9\u03C3\u03C3\u03CC\u03C4\u03B5\u03C1\u03B5\u03C2 \u0394\u03C5\u03BD\u03AC\u03BC\u03B5\u03B9\u03C2
-controls.hide-free-body-diagram=\u0394\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1 \u0395\u03BB\u03B5\u03CD\u03B8\u03B5\u03C1\u03BF\u03C5 \u03A3\u03CE\u03BC\u03B1\u03C4\u03BF\u03C2<<
-property.coefficient-of-friction=\u03A3\u03C5\u03BD\u03C4\u03B5\u03BB\u03B5\u03C3\u03C4\u03AE\u03C2 \u03A4\u03C1\u03B9\u03B2\u03AE\u03C2
-forces.parallel-wall=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u0394\u03CD\u03BD\u03B1\u03BC\u03B7 \u03A4\u03BF\u03AF\u03C7\u03BF\u03C5
-time.playback=\u0391\u03BD\u03B1\u03C0\u03B1\u03C1\u03B1\u03B3\u03C9\u03B3\u03AE
-forces.Net=\u03BF\u03BB\u03B9\u03BA\u03AE
-coordinates.perpendicular-components=\u039A\u03AC\u03B8\u03B5\u03C4\u03B5\u03C2 \u03A3\u03C5\u03BD\u03B9\u03C3\u03C4\u03CE\u03C3\u03B5\u03C2
-object.crate=\u039A\u03B9\u03B2\u03CE\u03C4\u03B9\u03BF
-the.ramp=\u039A\u03B5\u03BA\u03BB\u03B9\u03BC\u03AD\u03BD\u03BF \u0395\u03C0\u03AF\u03C0\u03B5\u03B4\u03BF
-the.ramp.simulation=\u03A0\u03C1\u03BF\u03C3\u03BF\u03BC\u03BF\u03AF\u03C9\u03C3\u03B7 \u039A\u03B5\u03BA\u03BB\u03B9\u03BC\u03AD\u03BD\u03BF\u03C5 \u0395\u03C0\u03B9\u03C0\u03AD\u03B4\u03BF\u03C5
-OptionPane.okText=\u0395\u03BD\u03C4\u03AC\u03BE\u03B5\u03B9
-forces.normal=\u039A\u03AC\u03B8\u03B5\u03C4\u03B7
-controls.frictionless=\u03A7\u03C9\u03C1\u03AF\u03C2 \u03A4\u03C1\u03B9\u03B2\u03AE
-invitation=<html>\u0395\u03C6\u03B1\u03C1\u03BC\u03BF\u03B3\u03AE \u0394\u03CD\u03BD\u03B1\u03BC\u03B7\u03C2<br> \u03C3\u03C4\u03BF \u0388\u03C0\u03B9\u03C0\u03BB\u03BF</html>
-controls.reset=\u0395\u03C0\u03B1\u03BD\u03B1\u03C6\u03BF\u03C1\u03AC
-display.graphs=\u0393\u03C1\u03B1\u03C6\u03AE\u03BC\u03B1\u03C4\u03B1
-controls.show-zero-point-pe=\u0395\u03C0\u03AF\u03B4\u03B5\u03B9\u03BE\u03B7 \u0395\u03C0\u03B9\u03C0\u03AD\u03B4\u03BF\u03C5 \u039C\u03B7\u03B4\u03B5\u03BD\u03B9\u03BA\u03AE\u03C2 \u0394\u0395
-forces.weight=\u0392\u03AC\u03C1\u03BF\u03C2
-display.bar-graph=\u03A1\u03B1\u03B2\u03B4\u03BF\u03B3\u03C1\u03AC\u03BC\u03BC\u03B1\u03C4\u03B1
-forces.applied-force=\u0391\u03C3\u03BA\u03BF\u03CD\u03BC\u03B5\u03BD\u03B7 \u0394\u03CD\u03BD\u03B1\u03BC\u03B7
-coordinates.parallel-components=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B5\u03C2 \u03A3\u03C5\u03BD\u03B9\u03C3\u03C4\u03CE\u03C3\u03B5\u03C2
-0.work=\u0388\u03C1\u03B3\u03BF {0}
-energy.kinetic=\u039A\u03B9\u03BD\u03B7\u03C4\u03B9\u03BA\u03AE
-controls.controls=\u03A7\u03B5\u03B9\u03C1\u03B9\u03C3\u03C4\u03AE\u03C1\u03B9\u03B1
-controls.cool-ramp=\u03A8\u03CD\u03BE\u03B7 \u039A\u03B5\u03BA\u03BB\u03B9\u03BC\u03AD\u03BD\u03BF\u03C5 \u0395\u03C0\u03B9\u03C0\u03AD\u03B4\u03BF\u03C5
-confirm-reset=\u0395\u03C0\u03B1\u03BD\u03B1\u03C6\u03BF\u03C1\u03AC \u03CC\u03BB\u03C9\u03BD;
-energy.potential=\u0394\u03C5\u03BD\u03B1\u03BC\u03B9\u03BA\u03AE
-camera.zoom-out=\u03A3\u03BC\u03AF\u03BA\u03C1\u03C5\u03BD\u03C3\u03B7
-forces.parallel=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u0394\u03CD\u03BD\u03B1\u03BC\u03B7
-time.rewind=\u0391\u03C0\u03CC \u03C4\u03B7\u03BD \u0391\u03C1\u03C7\u03AE
-time.playback-timer=\u03A7\u03C1\u03BF\u03BD\u03CC\u03BC\u03B5\u03C4\u03C1\u03BF \u0391\u03BD\u03B1\u03C0\u03B1\u03C1\u03B1\u03B3\u03C9\u03B3\u03AE\u03C2
+properties.velocity.units=\u03BC/\u03B4
+game.object.mass-equals.pattern.mass=\u039C\u03AC\u03B6\u03B1 \= {0} kg
+position.controls.title=\u0398\u03AD\u03C3\u03B7
+ramp-forces-and-motion.module.force-graphs=\u0393\u03C1\u03B1\u03C6\u03AE\u03BC\u03B1\u03C4\u03B1 \u03B4\u03C5\u03BD\u03AC\u03BC\u03B5\u03C9\u03BD
+bodies.moon=\u03A3\u03B5\u03BB\u03AE\u03BD\u03B7
+audio.off=\u03BA\u03BB\u03B5\u03B9\u03C3\u03C4\u03CC\u03C2
+walls.bouncy=\u039C\u03B5 \u03B1\u03BD\u03B1\u03C0\u03AE\u03B4\u03B7\u03C3\u03B7
+game.intro.press-to-begin=\u03A0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03AD\u03BD\u03B1 \u03C0\u03BB\u03AE\u03BA\u03C4\u03C1\u03BF \u03BC\u03B5 \u03B2\u03AD\u03BB\u03BF\u03C2 \u03C3\u03C4\u03BF\u03BD \u03C0\u03BB\u03B7\u03BA\u03C4\u03C1\u03BF\u03BB\u03CC\u03B3\u03B9\u03CC \u03C3\u03B1\u03C2 \u03B3\u03B9\u03B1 \u03BD\u03B1 \u03B1\u03C3\u03BA\u03AE\u03C3\u03B5\u03C4\u03B5 \u03BC\u03B9\u03B1 \u03B4\u03CD\u03BD\u03B1\u03BC\u03B7...
+walls.type=\u03A4\u03BF\u03AF\u03C7\u03BF\u03B9
+property.coefficient-of-static-friction=<html>\u03A3\u03C4\u03B1\u03C4\u03B9\u03BA\u03AE \u03C4\u03C1\u03B9\u03B2\u03AE (\u03BC<sub>s</sub>)</html>
+game.robot-energy=\u0395\u03BD\u03AD\u03C1\u03B3\u03B5\u03B9\u03B1 \u03C4\u03BF\u03C5 \u03C1\u03BF\u03BC\u03C0\u03CC\u03C4
+game.object.kinetic-friction-equals.pattern.kinetic-friction=\u039A\u03B9\u03BD\u03B7\u03C4\u03B9\u03BA\u03AE \u03C4\u03C1\u03B9\u03B2\u03AE \= {0}
+ramp-forces-and-motion.module.friction.title=\u03A4\u03C1\u03B9\u03B2\u03AE
+object.mystery-object=\u039C\u03C5\u03C3\u03C4\u03AE\u03C1\u03B9\u03BF \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF
+vectors.parallel-components=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B1 \u03C3\u03C4\u03BF\u03B9\u03C7\u03B5\u03AF\u03B1
+game.intro.our-motto=\u03A4\u03BF \u03B1\u03C0\u03CC\u03C6\u03B8\u03B5\u03B3\u03BC\u03AC \u03BC\u03B1\u03C2
+symbols.parallel=\u2225
+game.result.stuck=\u039A\u03BF\u03BB\u03BB\u03B7\u03BC\u03AD\u03BD\u03BF
+properties.position.units=m
+forces-and-motion.module.intro.title=\u0395\u03B9\u03C3\u03B1\u03B3\u03C9\u03B3\u03AE
+ramp.angle-readout=\u0393\u03C9\u03BD\u03AF\u03B1 \= {0} \u00B0
+chart.time-axis-label=\u03C7\u03C1\u03CC\u03BD\u03BF\u03C2 (\u03B4\u03B5\u03C5\u03C4.)
+forces.gravity=\u0392\u03B1\u03C1\u03CD\u03C4\u03B7\u03C4\u03B1
+game.score=\u0392\u03B1\u03B8\u03BC\u03BF\u03BB\u03BF\u03B3\u03AF\u03B1
+forces.gravity-parallel=\u0392\u03B1\u03C1\u03CD\u03C4\u03B7\u03C4\u03B1 \u0399\u0399
+forces-and-motion.name=\u0394\u03C5\u03BD\u03AC\u03BC\u03B5\u03B9\u03C2 \u03BA\u03B1\u03B9 \u039A\u03AF\u03BD\u03B7\u03C3\u03B7
+game.summary.total=\u03A3\u03CD\u03BD\u03BF\u03BB\u03BF
+game.show-summary=\u0395\u03BC\u03C6\u03AC\u03BD\u03B9\u03C3\u03B7 \u03C3\u03CD\u03BD\u03BF\u03C8\u03B7\u03C2
+force.abbrev.total=\u03B1\u03B8\u03C1.
+game.summary.message=\u0391\u03C5\u03C4\u03CC \u03AE\u03C4\u03B1\u03BD \u03C4\u03BF \u03C4\u03B5\u03BB\u03B5\u03C5\u03C4\u03B1\u03AF\u03BF \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF \u03B3\u03B9\u03B1 \u03BC\u03B5\u03C4\u03B1\u03BA\u03AF\u03BD\u03B7\u03C3\u03B7\!
+forces.parallel=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u03B4\u03CD\u03BD\u03B1\u03BC\u03B7
+force.abbrev.gravity=g
 controls.clear=\u0395\u03BA\u03BA\u03B1\u03B8\u03AC\u03C1\u03B9\u03C3\u03B7
-OptionPane.cancelText=\u0386\u03BA\u03C5\u03C1\u03BF
 units.meters=\u03BC\u03AD\u03C4\u03C1\u03B1
-forces.parallel-gravity=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u0394\u03CD\u03BD\u03B1\u03BC\u03B7 \u0392\u03AC\u03C1\u03BF\u03C5\u03C2
-property.position=\u0398\u03AD\u03C3\u03B7
-object.piano=\u03A0\u03B9\u03AC\u03BD\u03BF
-coordinates.frames=\u03A3\u03C5\u03BD\u03C4\u03BF\u03BD\u03B9\u03C3\u03BC\u03CC\u03C2 \u03A0\u03BB\u03B1\u03B9\u03C3\u03AF\u03C9\u03BD
-energy.energy=\u0395\u03BD\u03AD\u03C1\u03B3\u03B5\u03B9\u03B1
-controls.show-free-body-diagram=\u0394\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1 \u0395\u03BB\u03B5\u03CD\u03B8\u03B5\u03C1\u03BF\u03C5 \u03A3\u03CE\u03BC\u03B1\u03C4\u03BF\u03C2>>
+units.abbr.newtons=\u039D
+ramp-forces-and-motion.module.robotMovingCompany=\u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1 \u03BC\u03B5\u03C4\u03B1\u03C6\u03BF\u03C1\u03CE\u03BD "\u03A4\u03BF \u03C1\u03BF\u03BC\u03C0\u03CC\u03C4"
+vectors.title=\u0394\u03B9\u03B1\u03BD\u03CD\u03C3\u03BC\u03B1\u03C4\u03B1
+game.summary.pattern.earned-energy-points=\= {0} \u03B2\u03B1\u03B8\u03BC\u03BF\u03AF
+properties.acceleration.units=m/s\u00B2
+units.sec=\u03B4\u03B5\u03C5\u03C4.
+walls.brick=\u03A4\u03BF\u03CD\u03B2\u03BB\u03BF
+forces.sum=\u0386\u03B8\u03C1\u03BF\u03B9\u03C3\u03BC\u03B1
 controls.friction=\u03A4\u03C1\u03B9\u03B2\u03AE
-object.file-cabinet=\u0388\u03C0\u03B9\u03C0\u03BB\u03BF
-forces.kinetic-friction=\u03A4\u03C1\u03B9\u03B2\u03AE \u039F\u03BB\u03B9\u03C3\u03B8\u03AE\u03C3\u03B5\u03C9\u03C2
-forces.friction=\u03C4\u03C1\u03B9\u03B2\u03AE
-time.record-timer=\u03A7\u03C1\u03BF\u03BD\u03CC\u03BC\u03B5\u03C4\u03C1\u03BF \u039A\u03B1\u03C4\u03B1\u03B3\u03C1\u03B1\u03C6\u03AE\u03C2
+game.summary.pattern.earned-object-points=\= {0} \u03B2\u03B1\u03B8\u03BC\u03BF\u03AF
+surface.wood=\u039E\u03CD\u03BB\u03BF
+object.file-cabinet=\u0391\u03C1\u03C7\u03B5\u03B9\u03BF\u03B8\u03AE\u03BA\u03B7
+game.object.points-equals.pattern.points=\u0392\u03B1\u03B8\u03BC\u03BF\u03AF \= {0}
+game.result.description.pattern.name-text={0} {1}
+force.abbrev.applied=a
+controls.show=\u0395\u03BC\u03C6\u03AC\u03BD\u03B9\u03C3\u03B7
+forces.friction=\u03A4\u03C1\u03B9\u03B2\u03AE
+vectors.sum-of-forces=\u0386\u03B8\u03C1\u03BF\u03B9\u03C3\u03BC\u03B1 \u03B4\u03C5\u03BD\u03AC\u03BC\u03B5\u03C9\u03BD
+game.intro.motto-text=<html>\u0391\u03C3\u03BA\u03BF\u03CD\u03BC\u03B5\u03BD\u03B7 \u03B4\u03CD\u03BD\u03B1\u03BC\u03B7<br>\u0391\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03B1 \u03C0\u03C1\u03BF\u03C2 \u03C0\u03B1\u03C1\u03AC\u03B4\u03BF\u03C3\u03B7<br>\u0395\u03BD\u03B1\u03C0\u03BF\u03BC\u03B5\u03AF\u03BD\u03B1\u03C3\u03B1 \u03B5\u03BD\u03AD\u03C1\u03B3\u03B5\u03B9\u03B1 \= \u0392\u03B1\u03B8\u03BC\u03BF\u03AF</html>
+game.instructions.press-arrow-keys=\u03A0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03C4\u03B1 \u03C0\u03BB\u03AE\u03BA\u03C4\u03C1\u03B1 \u03BC\u03B5 \u03C4\u03B1 \u03B2\u03B5\u03BB\u03AC\u03BA\u03B9\u03B1
 forces.applied=\u0391\u03C3\u03BA\u03BF\u03CD\u03BC\u03B5\u03BD\u03B7
-forces.applied.n=\u0391\u03C3\u03BA\u03BF\u03CD\u03BC\u03B5\u03BD\u03B7 \u0394\u03CD\u03BD\u03B1\u03BC\u03B7 (\u039D)
-confirm.clear=\u0395\u03C0\u03B9\u03B2\u03B5\u03B2\u03B1\u03AF\u03C9\u03C3\u03B7 \u0395\u03BA\u03BA\u03B1\u03B8\u03AC\u03C1\u03B9\u03C3\u03B7\u03C2
+game.final-score=\u03A4\u03B5\u03BB\u03B9\u03BA\u03AE \u03B2\u03B1\u03B8\u03BC\u03BF\u03BB\u03BF\u03B3\u03AF\u03B1
+vectors.force-vectors=\u0394\u03B9\u03B1\u03BD\u03CD\u03C3\u03BC\u03B1\u03C4\u03B1 \u03B4\u03C5\u03BD\u03AC\u03BC\u03B5\u03C9\u03BD
+object.small-crate=\u039A\u03B9\u03B2\u03CE\u03C4\u03B9\u03BF
+symbols.perpendicular=\u22A5
+surface.ice-no-friction=\u03A0\u03AC\u03B3\u03BF\u03C2 (\u03C7\u03C9\u03C1\u03AF\u03C2 \u03C4\u03C1\u03B9\u03B2\u03AE)
+ramp-forces-and-motion.module.energy=\u0395\u03BD\u03AD\u03C1\u03B3\u03B5\u03B9\u03B1
 object.refrigerator=\u03A8\u03C5\u03B3\u03B5\u03AF\u03BF
+controls.applied-force-x=\u0391\u03C3\u03BA\u03BF\u03CD\u03BC\u03B5\u03BD\u03B7 \u03B4\u03CD\u03BD\u03B1\u03BC\u03B7
+game.result.crashed=\u03BA\u03B1\u03C4\u03B1\u03C3\u03C4\u03C1\u03AC\u03C6\u03B7\u03BA\u03B5
+vectors.point-of-origin=\u03A3\u03B7\u03BC\u03B5\u03AF\u03BF \u03C0\u03C1\u03BF\u03AD\u03BB\u03B5\u03C5\u03C3\u03B7\u03C2
+chart.series-readout.pattern.value_units=\= {0} {1}
 controls.choose-object=\u0395\u03C0\u03B9\u03BB\u03BF\u03B3\u03AE \u0391\u03BD\u03C4\u03B9\u03BA\u03B5\u03B9\u03BC\u03AD\u03BD\u03BF\u03C5
-readout.graph-name=\u0393\u03C1\u03AC\u03C6\u03B7\u03BC\u03B1\: {0}
+bodies.earth=\u0393\u03B7
+properties.format.value-units={0} {1}
+ramp.height-indicator=h \= {0} m
+forces-and-motion.module.friction.title=\u03A4\u03C1\u03B9\u03B2\u03AE
 display.free-body-diagram=\u0394\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1 \u0395\u03BB\u03B5\u03CD\u03B8\u03B5\u03C1\u03BF\u03C5 \u03A3\u03CE\u03BC\u03B1\u03C4\u03BF\u03C2
-confirm-clear-graphs=\u03A3\u03AF\u03B3\u03BF\u03C5\u03C1\u03B1 \u03B8\u03AD\u03BB\u03B5\u03C4\u03B5 \u03BD\u03B1 \u03B5\u03BA\u03BA\u03B1\u03B8\u03B1\u03C1\u03B9\u03C3\u03C4\u03BF\u03CD\u03BD \u03C4\u03B1 \u03B3\u03C1\u03B1\u03C6\u03AE\u03BC\u03B1\u03C4\u03B1;
-forces.parallel-applied=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u0395\u03C6\u03B1\u03C1\u03BC. \u0394\u03CD\u03BD\u03B1\u03BC\u03B7
-forces.total=\u039F\u03BB\u03B9\u03BA\u03AE
-forces.static-friction=\u03A3\u03C4\u03B1\u03C4\u03B9\u03BA\u03AE \u03A4\u03C1\u03B9\u03B2\u03AE
-units.meters-per-second=\u03BC\u03AD\u03C4\u03C1\u03B1/sec
-confirm.reset.title=\u0395\u03C0\u03B9\u03B2\u03B5\u03B2\u03B1\u03AF\u03C9\u03C3\u03B7 \u0395\u03C0\u03B1\u03BD\u03B1\u03C6\u03BF\u03C1\u03AC\u03C2
-time.live=\u03A0\u03C1\u03B1\u03B3\u03BC\u03B1\u03C4\u03B9\u03BA\u03CC\u03C2 \u03A7\u03C1\u03CC\u03BD\u03BF\u03C2
-0.energy=\u0395\u03BD\u03AD\u03C1\u03B3\u03B5\u03B9\u03B1 {0}
-energy.work=\u0388\u03C1\u03B3\u03BF
-controls.measuring-tape=\u039C\u03B5\u03C4\u03C1\u03BF\u03C4\u03B1\u03B9\u03BD\u03AF\u03B1
-forces.Wall=\u03A4\u03BF\u03AF\u03C7\u03BF\u03C2
-coordinates.x-components=\u03A3\u03C5\u03BD\u03B9\u03C3\u03C4\u03CE\u03C3\u03B5\u03C2-\u03A7
-controls.forces-to-show=\u0395\u03C0\u03AF\u03B4\u03B5\u03B9\u03BE\u03B7 \u0394\u03C5\u03BD\u03AC\u03BC\u03B5\u03C9\u03BD
+game.object=\u0391\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF
+forces.wall=\u03A4\u03BF\u03AF\u03C7\u03BF\u03C2
+game.lost-items=\u0391\u03C0\u03C9\u03BB\u03B5\u03C3\u03B8\u03AD\u03BD\u03C4\u03B1 \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03B1
+ramp-forces-and-motion.module.coordinates=\u03A3\u03C5\u03BD\u03C4\u03B5\u03C4\u03B1\u03B3\u03BC\u03AD\u03BD\u03B5\u03C2
+property.object-mass=\u039C\u03AC\u03B6\u03B1 \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03B9\u03BC\u03AD\u03BD\u03BF\u03C5
+object.textbook=\u0392\u03B9\u03B2\u03BB\u03AF\u03BF
+forces.parallel-title=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B5\u03C2 \u03B4\u03C5\u03BD\u03AC\u03BC\u03B5\u03B9\u03C2
+game.ok=\u0395\u03BD\u03C4\u03AC\u03BE\u03B5\u03B9
+properties.acceleration=\u0395\u03C0\u03B9\u03C4\u03AC\u03C7\u03C5\u03BD\u03C3\u03B7
+vectors.centered=\u039A\u03B5\u03BD\u03C4\u03C1\u03B1\u03C1\u03B9\u03C3\u03BC\u03AD\u03BD\u03BF
+forces.parallel-title-with-units=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B5\u03C2 \u03B4\u03C5\u03BD\u03AC\u03BC\u03B5\u03B9\u03C2 (N)
+units.abbr.kg=\u03BA.
+force.abbrev.normal=N
+game.item-readout-counter.pattern.name-count={0}\: {1}
+forces.sum-parallel=\u0386\u03B8\u03C1\u03BF\u03B9\u03C3\u03BC\u03B1 \u0399\u0399
