--- a/trunk/simulations-java/simulations/moving-man/data/moving-man/localization/moving-man-strings_cs.properties
+++ b/trunk/simulations-java/simulations/moving-man/data/moving-man/localization/moving-man-strings_cs.properties
@@ -1,65 +1,31 @@
-#moving-man_CZ.properties created Wed Jan 06 21:14:28 CET 2010 using: moving-man 1.19.00 (17674), translation-utility 1.09.00 (26682)
-#Wed Jan 06 21:14:28 CET 2010
-plot.pause=Pauza
-time.clear=Smazat
-options.free-range=Bez p\u0159ek\u00E1\u017Eek
+#moving-man-strings_cs.properties created Mon Nov 15 11:37:02 CET 2010 using: moving-man 2.01.00 (44461), translation-utility 2.09.00 (44031) IX 14, 2010
+#Mon Nov 15 11:37:02 CET 2010
 units.seconds=sekund
-options.sound=Zvuky
-plot.go=Start\!
-controls.reset=Vynulovat
-controls.reverse-x-axis=Oto\u010Dit osu X
-controls.vectors=Vektory
-units.acceleration.abbreviation=<html>m/s<sup><font size\=-1>2</font></sup></html>
-controls.help=N\u00E1pov\u011Bda
-mm-motion.name=Chod\u00EDc\u00ED pan\u00E1\u010Dek (pohyb)
-variables.velocity.abbreviation=v
-options.model-controls.explanation=<html>Vyberte po\u010Det bod\u016F, kter\u00E9 budou zahrnuty <br> ve vyhlazovac\u00EDm okn\u011B pro ka\u017Edou prom\u011Bnnou. <br> Okno 'constant-check-window' kontroluje posledn\u00ED <br> nevyhlazen\u00E9 \u00FAdaje o polohov\u00FDch bodech a jestli\u017Ee <br> jsou stejn\u00E9, nastav\u00ED rychlost a zrychlen\u00ED <br> (p\u0159edvyhlazen\u00ED) na hodnotu nua.<html>
-units.velocity.abbreviation=m/s
-controls.special-features=Speci\u00E1ln\u00ED vlastnosti
-options.use-constant-window=Pou\u017E\u00EDt "Constant window"
-variables.velocity=Rychlost
-time.slow-playback=Pomal\u00E9 p\u0159ehr\u00E1n\u00ED
-time.pause=Pauza
-plot.zoom-out=Odd\u00E1lit
-RecordMode.ModeName=Nahr\u00E1t
-options.number-smoothing-points=Kolik vyhlazovac\u00EDch bod\u016F?
-plot.show=Uk\u00E1zat
-help.type-a-value=Napi\u0161 hodnotu
 variables.acceleration.abbreviation=a
-moving-man-position.name=Chod\u00EDc\u00ED pan\u00E1\u010Dek
-options.real-time=Real-time
-menu.view=Zobrazit
-expressions.range=x(t)
-controls.playback=P\u0159ehr\u00E1t
-help.drag-the-cursor=Pohybuj s kurzorem
-options.model-options=Mo\u017Enosti modelu
-controls.special-features.mnemonic=s
-help.drag-the-slider=Pohybuj s jezdcem
-variables.acceleration=Zrychlen\u00ED
-units.meters=metry
-expressions.description=Zadej funkci \u010Dasu (prom\u011Bnn\u00E1 "t")
-expressions.example=9*sin(t*t/pi)
-variables.position.abbreviation=x
-plot.time=\u010Cas
-plot.confirm-clear=T\u00EDmto vyma\u017Eete hodnoty v grafech. Jste si jisti, \u017Ee to chcete ud\u011Blat?
-help.drag-the-man=Pohybuj s pan\u00E1\u010Dkem
-time.playback=P\u0159ehr\u00E1t
-plot.confirm-reset=Potvr\u010F vynulov\u00E1n\u00ED
-plot.clear=Smazat
-controls.error-loading-help=Chyba p\u0159i na\u010D\u00EDt\u00E1n\u00ED n\u00E1pov\u011Bdy
-expressions.control.reset=Vynulovat
-controls.close-plot=Zav\u0159\u00EDt graf
-moving-man.name=Chod\u00EDc\u00ED pan\u00E1\u010Dek
-controls.record=Nahr\u00E1t
-options.walls=Zdi
-moving-man.description=U\u010Dte se \u010D\u00EDst z grafu polohy, rychlosti a zrychlen\u00ED. Pohybujte mal\u00FDm pan\u00E1\u010Dkem tam a zp\u00E1tky pomoc\u00ED my\u0161i a vykreslete grafy jeho pohybu. Nastavte m\u00EDsto, rychlost \u010Di zrychlen\u00ED a nechte simulaci pracovat za v\u00E1s. 
-variables.position=Poloha
-time.rewind=P\u0159eto\u010Dit
-plot.zoom-in=P\u0159ibl\u00ED\u017Eit
-plot.close-graph=Zav\u0159\u00EDt graf
-mm-motion.description=Aplikace Chod\u00EDc\u00ED pan\u00E1\u010Dek (pohyb)
 expressions.title=Pohyb dle zadan\u00E9 rovnice
-options.model-controls=Ovl\u00E1d\u00E1n\u00ED modelu
+module.introduction.title=\u00DAvod
+variables.velocity.abbreviation=v
+controls.vectors=Vektory
+controls.reverse-x-axis=Oto\u010Dit osu X
+label.zero-meters=0 metr\u016F
+units.velocity.abbreviation=m/s
 units.meters.abbreviation=m
-options.number-smoothing.points.title=Zm\u011Bnit po\u010Det vyhlazovac\u00EDch bod\u016F
-moving-man-position.description=U\u010Dte se \u010D\u00EDst z grafu polohy, rychlosti a zrychlen\u00ED. Pohybujte mal\u00FDm pan\u00E1\u010Dkem tam a zp\u00E1tky pomoc\u00ED my\u0161i a vykreslete grafy jeho pohybu. Nastavte m\u00EDsto, rychlost \u010Di zrychlen\u00ED a nechte simulaci pracovat za v\u00E1s. 
+controls.special-features=Speci\u00E1ln\u00ED vlastnosti
+module.charts.title=Grafy
+expressions.examples=<html>Zde jsou p\u0159\u00EDklady platn\u00FDch v\u00FDraz\u016F\: <br>x \= 3 * t + 2<br>x \= 2*sin(t)<br>x \= pow(t,2)<br><br>Pozor\! N\u00E1soben\u00ED mus\u00ED b\u00FDt explicitn\u011B ozna\u010Deno\! <br>tedy nap\u0159. 3 * t.  Z\u00E1pis 3t nelze pou\u017E\u00EDt.</html>
+options.sound=Zvuky
+units.acceleration.abbreviation=<html>m/s<sup><font size\=-1>2</font></sup></html>
+variables.velocity=Rychlost
+pattern.time.label={0} {1}
+units.seconds.abbreviation=s
+units.meters=metry
+variables.position=Poloha
+variables.acceleration=Zrychlen\u00ED
+vectors.velocity-vector=Vektor rychlosti
+expressions.range=x(t)
+expressions.description=Zadej funkci \u010Dasu (prom\u011Bnn\u00E1 "t")
+vectors.acceleration-vector=Vektor zrychlen\u00ED
+expressions.error=Chyba
+expressions.help=N\u00E1pov\u011Bda
+variables.position.abbreviation=x
+moving-man.name=Chod\u00EDc\u00ED pan\u00E1\u010Dek
