--- a/simulations-java/simulations/capacitor-lab/TODO.txt
+++ b/simulations-java/simulations/capacitor-lab/TODO.txt
@@ -6,6 +6,7 @@ QUESTIONS FOR NOAH
 - should you be able to touch the bottom plate with a voltmeter probe through the transparent dielectric?
 - when should the dielectric be transparent?
 - any special consideration with the glass dielectric, which is always transparent?
+- should be put a dashed box around the E-field measurement shape?
 
 NOAH P ACTION ITEMS
 - consider doing mockup tests of circuit construction, due to the cost and potential confusion of this feature
