--- a/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+Added initial support for different units
 Added a gravity control
 Added particle model for food coloring
 Added labels and tick marks to density slider
