--- a/simulations-java/simulations/capacitor-lab/changes.txt
+++ b/simulations-java/simulations/capacitor-lab/changes.txt
@@ -1,3 +1,4 @@
+11/15/10 remove transparency feature from plates, they are always opaque
 11/15/10 remove dielectric transparency for voltmeter
 # 0.00.43 (46138) Nov 15, 2010
 11/15/10 dev version to demo measurement of voltage and E-field in 2D projection of 3D scene
