--- a/trunk/simulations-java/simulations/capacitor-lab/TODO.txt
+++ b/trunk/simulations-java/simulations/capacitor-lab/TODO.txt
@@ -18,7 +18,8 @@ DESIGN ISSUES
 - should only the negative dielectric charges move in the "Show all charges" view?
 
 HIGH PRIORITY
-- address stroke issue in WireSegment.createShape
+- better encapsulation of measuring strategy based on 2D projection of Shapes
+- address stroke issue in WireShapeFactory.createSegmentShape
 - WireNode gets shapes from Wire, which has a Shape property, this pattern is different
 - hack in BottomWire
 
